# cdown

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.example.yaml  config.yaml.example  prompt.txt  pyproject.toml
src/cdown/: cmd.py  config.py  downloader.py  input_provider.py  main.py  mapping.py  uploader.py
